# ChangeLog for dev-games/guichan
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/guichan/ChangeLog,v 1.18 2009/11/25 14:29:42 maekke Exp $

  25 Nov 2009; Markus Meier <maekke@gentoo.org> guichan-0.8.1.ebuild:
  amd64/x86 stable, bug #294344

  03 Feb 2009; Alfredo Tupone <tupone@gentoo.org>
  files/guichan-0.8.1-as-needed.patch, guichan-0.8.1.ebuild:
  Fix build after resolving --as-needed. bug #257455 by franzec05@gmail.com

  03 Feb 2009; Michael Sterrett <mr_bones_@gentoo.org> guichan-0.8.1.ebuild:
  Commented out the patch until the as-needed stuff is fixed (bug #257455)

  28 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  files/guichan-0.8.1-as-needed.patch, guichan-0.8.1.ebuild:
  EAPI=2; re-roll patch so it applies

  28 Jan 2009; Alfredo Tupone <tupone@gentoo.org>
  +files/guichan-0.8.1-as-needed.patch, guichan-0.8.1.ebuild:
  Declare dependant library to fix --as-needed bug #256443 by Lars
  (Polynomial-C) <polynomial-C@gmx.de>

*guichan-0.8.1 (27 Apr 2008)

  27 Apr 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +guichan-0.8.1.ebuild:
  version bump

*guichan-0.7.1 (21 Jul 2007)

  21 Jul 2007; Tristan Heaven <nyhm@gentoo.org> +guichan-0.7.1.ebuild:
  Version bump

*guichan-0.6.1 (13 Mar 2007)

  13 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +guichan-0.6.1.ebuild:
  version bump; clean out old version

  16 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  -guichan-0.5.0.ebuild:
  clean out older ebuild

*guichan-0.6.0 (16 Jan 2007)

  16 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +guichan-0.6.0.ebuild:
  version bump

  05 Jan 2007; Tristan Heaven <nyhm@gentoo.org> guichan-0.5.0.ebuild:
  Add glut USE flag

*guichan-0.5.0 (20 Aug 2006)

  20 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +guichan-0.5.0.ebuild:
  version bump

  19 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  guichan-0.4.0-r1.ebuild: