@@ -3,13 +3,13 @@ Hash: SHA1
 
 AUX guichan-0.8.1-as-needed.patch 701 RMD160 0bcc074d4c9eb7c257c3c9966d4649d463cc85da SHA1 5555be3185e755a4ad33b9cee66c80655ff6eccb SHA256 53c62d9e7ce7782154675d57170d4630bc83bfa6d5f66a4fe073b597b61ad2e4
 DIST guichan-0.8.1.tar.gz 556670 RMD160 4a8238e0cf38057a1b8cedb2e7da62a5e8849d18 SHA1 7ab44c3b1b0f0577bc5e8a44b918f61cb66164c3 SHA256 6a48754f16ecb6f4da7c40bfff469f75b62127acc108b7f513d9bd85192b77d4
-EBUILD guichan-0.8.1.ebuild 1010 RMD160 c1df414b9acd05b2561a0337c612e8f4324ef7fe SHA1 734791b155db95228a22d35b37b5c0f162ec72d9 SHA256 6cf998f8c30bb5a06dc7b0ee1c82139d8c71cf2bdd1b46ff1d2079d96de05587
-MISC ChangeLog 2650 RMD160 f675e91698a9fdb4746b523c5b4cc6057f8dc8d1 SHA1 e33dc2bf912bae8965ea38fb8f36cd47946a4ee6 SHA256 97019657bbfe47ab29e172b269d93ed318db39e6d58698c9f8b418ddae8e2d13
+EBUILD guichan-0.8.1.ebuild 1009 RMD160 7fa264e5a99aea041369de364205d74cffd9db20 SHA1 cfd9bc94b6db0f673d7f4cf85b2dbde77f6a5143 SHA256 c293d36ace9569a2f577e0cd72197e7beb0bbfc70e10b26a813a3bd502e93b31
+MISC ChangeLog 2758 RMD160 a14fcf88ec2dd0f0334ac78da9efc66af3267723 SHA1 0aaca3f62be7f10dbc3ece1346e107f5edaea4bf SHA256 19532cdfb8c64f18923e035cc462596dc8b773036a2d0e10e375d24eabcc4b08
 MISC metadata.xml 236 RMD160 883c6c7498e3248887a2ab25ade7db50544de6fe SHA1 0c5fe13fc5a85e0be007822fb1518a2eb0168887 SHA256 1b237224dc164d33a8ad46d480edcc72673b11274313cf167cb5acb50749a1f8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAksNP2cACgkQkKaRLQcq0GKHQwCfYwBINMoX/C7o+Hz22ie3sECy
-BpMAn1S94yRKQX10Paz8dlpTq0W1G2U2
-=AKu8
+iEYEARECAAYFAkty2JMACgkQcsIHjyDViGQzLACeKfGLyk2KESWG4hDtSsA47Id3
+IaUAoOFMLgfiHyNXuW+00Qh27VBWADS3
+=c1Zk
 -----END PGP SIGNATURE-----
