@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/guichan
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/guichan/ChangeLog,v 1.18 2009/11/25 14:29:42 maekke Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/guichan/ChangeLog,v 1.19 2010/02/10 16:03:13 josejx Exp $
+
+  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> guichan-0.8.1.ebuild:
+  Marked ppc stable for bug #294537.
 
   25 Nov 2009; Markus Meier <maekke@gentoo.org> guichan-0.8.1.ebuild:
   amd64/x86 stable, bug #294344
